# csvtool

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2025-06-25-csvtool-impl-plan.md  2025-06-26-csvtool-phase2-impl-plan.md
docs/superpowers/specs/: 2025-06-25-csvtool-design.md  2025-06-26-csvtool-phase2-design.md
src/dv/: display.py  main.py  reader.py  utils.py
tests/: test_cat.py  test_convert.py  test_join.py  test_peek.py  test_reader.py  test_rename.py  test_search.py  test_sql_output.py
tests/fixtures/: sample.csv  sample.json  sample.parquet  sample.tsv
