[project]
authors = [{name = "laq12345", email = "laq12345@stu.zzu.edu.cn"}]
dependencies = []
name = "dv"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dv = { path = ".", editable = true }

[project.scripts]
dv = "dv.main:main_cli"

[tool.pixi.tasks]
dv = "python -m dv.main"
test = "pytest -v"

[tool.pixi.dependencies]
typer = ">=0.26.7,<0.27"
rich = ">=15.0.0,<16"
duckdb = ">=1.5.4,<2"
loguru = ">=0.7.3,<0.8"
pytest = ">=9.1.1,<10"
ruff = ">=0.15.19,<0.16"
